--- a/client/popup.html
+++ b/client/popup.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <h3>Lexify</h3>
-    <p>Select text on any website and hit "Correct" to fix grammar.</p>
-    <div>
-      <label for="mode">Select Mode:</label>
-      <select id="mode">
-        <option value="formal">Formal</option>
-        <option value="casual">Casual</option>
-        <option value="neutral">Neutral</option>
-      </select>
-    </div>
-    <button id="correct-btn">Correct</button>
-  </body>
+<head>
+  <title>Lexify</title>
+  <style>
+    body {
+      width: 200px;
+      padding: 10px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h2>Lexify</h2>
+  <p>Click the button to correct selected text:</p>
+  <button id="correctButton">Correct Text</button>
   <script src="popup.js"></script>
+</body>
 </html>
